# multi-agents-swarm-

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_swarm_first_run.py
app/: config.py
app/services/swarm_agent/: __init__.py  config.py  exceptions.py  observability.py  text.py  types.py  utils.py
app/services/swarm_agent/agents/: __init__.py  prompts.py  registry.py
app/services/swarm_agent/agents/tools/: __init__.py  base.py  cache.py
app/services/swarm_agent/agents/tools/system/: __init__.py  schemas.py
app/services/swarm_agent/agents/tools/web/: __init__.py  client.py  schemas.py
app/services/swarm_agent/graph/: __init__.py  bootstrap.py  builder.py
app/services/swarm_agent/graph/budget/: __init__.py  compaction.py  context.py
app/services/swarm_agent/graph/runtime/: __init__.py  agent.py  finalization.py  retry.py  routing.py  tool_executor.py  tool_protocol.py
app/services/swarm_agent/graph/state/: __init__.py  reducers.py
app/services/swarm_agent/llm/: __init__.py  http.py  registry.py
docs/: swarm_agent_full_architecture_audit_v0_6_0.html
