[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project]
name = "service"
version = "0.1.0"
description = "High-performance AI agent service"
requires-python = ">=3.12"
readme = "readme.md"



dependencies = [
    "alembic>=1.14.0",
    "apscheduler>=3.10.0",
    "aiogram>=3.26.0",
    "aiogram-i18n>=1.5",
    "asyncpg>=0.29.0",
    "cachetools>=7.0.5",
    "dishka>=1.2.0",
    "fastapi>=0.115.0",
    "fluent-compiler>=1.1",
    "httptools>=0.6.4",
    "loguru>=0.7.2",
    "orjson>=3.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "python-logging-loki>=0.3.1",
    "psycopg[binary]>=3.1.18",
    "httpx[http2]>=0.27.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.30",
    "urllib3>=2.3.0",
    "uvicorn[standard]>=0.34.0",
    "uuid6>=2025.0.1",
    "langgraph>=1.1.3",
    "langgraph-swarm>=0.1.0",
    "langchain>=1.0.0",
    "langchain-core>=1.2.21",
    "langchain-openai>=1.1.12",
    "langfuse>=4.0.1",
    "langsmith>=0.3.0",
    "langchain-mcp-adapters>=0.2.2",
]



[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "watchfiles>=1.0.0",
    "types-requests>=2.32.0",
    "pytest-html>=4.2.0",
]



[tool.hatch.build.targets.wheel]
packages = ["app"]



[tool.ruff]
line-length = 100
target-version = "py312"



[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "C4", "RET", "SIM", "TCH"]
ignore = ["D100", "D104", "D107"]



[tool.ruff.lint.isort]
known-first-party = ["app"]



[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
exclude = ["venv", ".venv", "tests"]



[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
addopts = """
    -v
    --cov=app
    --cov-report=html
    --cov-report=term-missing
    --html=tests/reports/last-run.html
    --self-contained-html
"""
